WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279220
[GTK] webkit_settings_set_enable_2d_canvas_acceleration fails on s390x
https://bugs.webkit.org/show_bug.cgi?id=279220
Summary
[GTK] webkit_settings_set_enable_2d_canvas_acceleration fails on s390x
Jeremy Bicha
Reported
2024-09-05 13:31:06 PDT
- WebKitGTK version: 2.45.3 through 2.45.92 - Epiphany version: 46.3, 47.rc etc - Distributor: Ubuntu 24.10 One of Epiphany's build tests began failing on s390x once Ubuntu packaged the 2.45 series of webkitgtk. The build completes successfully with webkitgtk 2.44 # Start of embed tests # Start of ephy-embed-shell tests ----------------------------------- stderr ----------------------------------- MESA: error: ZINK: vkCreateInstance failed (VK_ERROR_INCOMPATIBLE_DRIVER) libEGL warning: egl: failed to create dri2 screen ** (/<<PKGBUILDDIR>>/obj-s390x-linux-gnu/tests/test-ephy-embed-shell:18073): WARNING **: 2D canvas acceleration not supported, webkit_settings_set_enable_2d_canvas_acceleration does nothing I originally reported this issue at
https://gitlab.gnome.org/GNOME/epiphany/-/issues/2429
but was directed to file an issue here. A few other details were mentioned there: - webkit_settings_set_enable_2d_canvas_acceleration does not work on big endian architectures, because it depends on skia - webkit_settings_set_enable_2d_canvas_acceleration gets called via webKitSettingsSetProperty when constructing the WebKitSettings - This needs to be fixed in WebKit. Either it should not warn at all, or should only warn if set manually and not just when setting to the default value
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2024-09-12 08:54:12 PDT
This is now happening on x86_64 as well.
Michael Catanzaro
Comment 2
2024-09-12 08:55:23 PDT
Just kidding, I think I have a cairo build rather than a skia build. Anyway, a good opportunity for me to fix it....
Michael Catanzaro
Comment 3
2024-09-12 09:27:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33553
EWS
Comment 4
2024-09-18 11:47:15 PDT
Committed
283863@main
(4844fb011b18): <
https://commits.webkit.org/283863@main
> Reviewed commits have been landed. Closing PR #33553 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug