Cherry-pick 283863@main (4844fb011b18). https://bugs.webkit.org/show_bug.cgi?id=279220

[GTK] webkit_settings_set_enable_2d_canvas_acceleration fails on s390x
    https://bugs.webkit.org/show_bug.cgi?id=279220

    Reviewed by Carlos Garcia Campos, Adrian Perez de Castro, and Fujii Hironori.

    Cairo doesn't support hardware acceleration. (Too bad for Windows and
    PlayStation and s390x!) So this setting only makes sense when Skia is
    used, or on Apple platforms.

    Also, the older setting no longer does anything, so it should default to
    OFF.

    * Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
    * Source/WebKit/UIProcess/API/glib/WebKitSettings.cpp:
    (webkit_settings_class_init):

    Canonical link: https://commits.webkit.org/283863@main

Canonical link: https://commits.webkit.org/282416.105@webkitglib/2.46